--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,18 @@
     right: 0;
     bottom: 0;
     width: auto;
+    min-width: 0%;
+    height: auto;
+    min-height: 0%;
+    z-index: -1;
+}
+
+.App-youtube-mask {
+    background: black;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: auto;
     min-width: 100%;
     height: auto;
     min-height: 100%;
